// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateMethodsAndStrategies should calculate based on recommended methods 1`] = `
[
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "mfa_cookie",
    "rank": 1,
    "recommended": false,
    "requested": false,
    "strategies": [
      "mfa_cookie",
    ],
  },
  {
    "hint": "email",
    "initialiseKey": "email",
    "method": "email",
    "rank": 2,
    "recommended": true,
    "requested": false,
    "strategies": [
      "email_otp",
      "email_link",
    ],
  },
  {
    "hint": "email",
    "initialiseKey": "username",
    "method": "password",
    "rank": 3,
    "recommended": true,
    "requested": false,
    "strategies": [
      "password_browser_link",
      "password",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "bank_id_se",
    "rank": 4,
    "recommended": false,
    "requested": false,
    "strategies": [
      "bank_id_se",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "device_link",
    "rank": 5,
    "recommended": false,
    "requested": false,
    "strategies": [
      "rdc_push_notification",
      "rdc_qr_code",
      "device_challenge",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "totp",
    "rank": 6,
    "recommended": false,
    "requested": false,
    "strategies": [
      "time_based_otp",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "webauthn",
    "rank": 7,
    "recommended": false,
    "requested": false,
    "strategies": [
      "webauthn",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "session_link",
    "rank": 8,
    "recommended": false,
    "requested": false,
    "strategies": [
      "session_otp",
      "session_accept_with_code",
    ],
  },
  {
    "hint": "phone",
    "initialiseKey": "phone_number",
    "method": "phone",
    "rank": 9,
    "recommended": false,
    "requested": false,
    "strategies": [
      "phone_otp",
    ],
  },
]
`;

exports[`calculateMethodsAndStrategies should calculate based on requested methods 1`] = `
[
  {
    "hint": "email",
    "initialiseKey": "email",
    "method": "email",
    "rank": 1,
    "recommended": false,
    "requested": true,
    "strategies": [
      "email_otp",
      "email_link",
    ],
  },
  {
    "hint": "email",
    "initialiseKey": "username",
    "method": "password",
    "rank": 2,
    "recommended": false,
    "requested": true,
    "strategies": [
      "password_browser_link",
      "password",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "mfa_cookie",
    "rank": 3,
    "recommended": false,
    "requested": false,
    "strategies": [
      "mfa_cookie",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "bank_id_se",
    "rank": 4,
    "recommended": false,
    "requested": false,
    "strategies": [
      "bank_id_se",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "device_link",
    "rank": 5,
    "recommended": false,
    "requested": false,
    "strategies": [
      "rdc_push_notification",
      "rdc_qr_code",
      "device_challenge",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "totp",
    "rank": 6,
    "recommended": false,
    "requested": false,
    "strategies": [
      "time_based_otp",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "webauthn",
    "rank": 7,
    "recommended": false,
    "requested": false,
    "strategies": [
      "webauthn",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "session_link",
    "rank": 8,
    "recommended": false,
    "requested": false,
    "strategies": [
      "session_otp",
      "session_accept_with_code",
    ],
  },
  {
    "hint": "phone",
    "initialiseKey": "phone_number",
    "method": "phone",
    "rank": 9,
    "recommended": false,
    "requested": false,
    "strategies": [
      "phone_otp",
    ],
  },
]
`;

exports[`calculateMethodsAndStrategies should calculate first factor values 1`] = `
[
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "bank_id_se",
    "rank": 1,
    "recommended": false,
    "requested": false,
    "strategies": [
      "bank_id_se",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "device_link",
    "rank": 2,
    "recommended": false,
    "requested": false,
    "strategies": [
      "rdc_qr_code",
      "device_challenge",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "webauthn",
    "rank": 3,
    "recommended": false,
    "requested": false,
    "strategies": [
      "webauthn",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "session_link",
    "rank": 4,
    "recommended": false,
    "requested": false,
    "strategies": [
      "session_accept_with_code",
    ],
  },
  {
    "hint": "email",
    "initialiseKey": "email",
    "method": "email",
    "rank": 5,
    "recommended": false,
    "requested": false,
    "strategies": [
      "email_otp",
      "email_link",
    ],
  },
  {
    "hint": "email",
    "initialiseKey": "username",
    "method": "password",
    "rank": 6,
    "recommended": false,
    "requested": false,
    "strategies": [
      "password_browser_link",
      "password",
    ],
  },
]
`;

exports[`calculateMethodsAndStrategies should calculate second factor values 1`] = `
[
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "mfa_cookie",
    "rank": 1,
    "recommended": false,
    "requested": false,
    "strategies": [
      "mfa_cookie",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "device_link",
    "rank": 2,
    "recommended": false,
    "requested": false,
    "strategies": [
      "rdc_push_notification",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "totp",
    "rank": 3,
    "recommended": false,
    "requested": false,
    "strategies": [
      "time_based_otp",
    ],
  },
  {
    "hint": "none",
    "initialiseKey": "none",
    "method": "session_link",
    "rank": 4,
    "recommended": false,
    "requested": false,
    "strategies": [
      "session_otp",
    ],
  },
  {
    "hint": "phone",
    "initialiseKey": "phone_number",
    "method": "phone",
    "rank": 5,
    "recommended": false,
    "requested": false,
    "strategies": [
      "phone_otp",
    ],
  },
]
`;
